# RavenPy

./: .cruft.json  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yamllint.yaml  .zenodo.json  .zizmor.yml  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  environment-dev.yml  environment-docs.yml  environment-rtd.yml  environment.yml  mypy.ini  pyproject.toml  requirements_dev.txt  requirements_docs.txt  requirements_gis.txt  setup.cfg  setup.py  tox.ini  tox.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/workflows/: auto-accept-ci-changes.yml  bump-version.yml  cache-cleaner.yml  codeql.yml  dependency-review.yml  first-pull-request.yml  label.yml  main.yml  notebooks.yml  publish-pypi.yml  publish.yml  remove-obsolete-cache.yml  scorecard.yml  tag-testpypi.yml  testdata-version.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt
RavenPy/: cli.py
benchmark/: 06_Raven_calibration.ipynb
build_helpers/: FindNetCDF.cmake
docs/: Makefile  conf.py  configuration.md  configuration.md.txt  configuration.rst  execute.md  index.rst  installation.rst  make.bat  modules.rst  outputs.md  ravenpy.cli.rst  ravenpy.config.rst  ravenpy.extractors.rst  ravenpy.models.emulators.rst  ravenpy.models.rst  ravenpy.rst  ravenpy.utilities.rst  readme.rst  releasing.rst  scripts.rst  usage.md  usage.rst  user_api.rst
docs/notebooks/: 00_Introduction_to_JupyterLab.ipynb  01_Getting_watershed_boundaries.ipynb  02_Extract_geographical_watershed_properties.ipynb  03_Extracting_forcing_data.ipynb  04_Emulating_hydrological_models.ipynb  05_Advanced_RavenPy_configuration.ipynb  06_Raven_calibration.ipynb  07_Making_and_using_hotstart_files.ipynb  08_Getting_and_bias_correcting_CMIP6_data.ipynb  09_Hydrological_impacts_of_climate_change.ipynb  10_Data_assimilation.ipynb  11_Climatological_ESP_forecasting.ipynb  12_Performing_hindcasting_experiments.ipynb  Assess_probabilistic_flood_risk.ipynb  Comparing_hindcasts_and_ESP_forecasts.ipynb  Distributed_hydrological_modelling.ipynb  ERA5_pr.nc  ERA5_tmax.nc  ERA5_tmin.nc  ERA5_weather_data.nc  ERA5_weather_data_Salmon.nc  HydroShare_integration.ipynb  Hydrological_realtime_forecasting.ipynb  Managing_Jupyter_Environments.ipynb  Matapedia_meteo_data_2D.nc  Matapedia_meteo_data_stations.nc  Meteo_stations_Matapedia_ERA5.nc  Perform_Regionalization.ipynb  RavenPy.ipynb  Running_HMETS_with_CANOPEX_dataset.ipynb  Running_Raven_with_CANOPEX_data.ipynb  Running_models_with_multiple_timeseries_files.ipynb  Sensitivity_analysis.ipynb  array_c.txt  climatological_ESP_forecasting.ipynb  future_dataset.nc  hydro_routing_product_example.ipynb  index.rst  input.geojson  matapedia.geojson  (+3 more)
docs/notebooks-notworking/: HydroShare_integration.ipynb
docs/notebooks/paper/: Perform_a_climate_change_impact_assessment.ipynb  (+1 more)
logos/: ravenpy_logo_temporary.tiff
ravenpy/: __init__.py  __version__.py  cli.py  executor.py  ravenpy.py  reader.py  tutorial.py  utils.py
ravenpy/cli/: __init__.py  aggregate_forcings_to_hrus.py  collect_subbasins_upstream_of_gauge.py  generate_grid_weights.py  generate_hrus_from_routing_product.py
ravenpy/config/: __init__.py  base.py  commands.py  constants.py  conventions.py  data.py  defaults.py  importers.py  options.py  parsers.py  processes.py  rv.py  rvs.py  symbolic.py  utils.py
ravenpy/config/emulators/: blended.py  hypr.py  (+7 more)
ravenpy/extractors/: HydrotelShapefileExtractor.py  Hydrotel_shapefile.py  forecasts.py  hydrotel.py  routing_product.py
ravenpy/models/: __init__.py  aggregate_forcings_to_HRUs.py  base.py  commands.py  emulators.py  importers.py  multimodel.py  options.py  rv.py  state.py
ravenpy/new_config/: __init__.py  base.py  commands.py  conventions.py  data.py  defaults.py  options.py  parsers.py  processes.py  rvs.py  utils.py
ravenpy/utilities/: __init__.py  analysis.py  calibration.py  checks.py  coords.py  data_assimilation.py  forecasting.py  geo.py  geoserver.py  gis.py  graphs.py  hv_graphs.py  io.py  mk_test.py  nb_graphs.py  ravenio.py  regionalization.py  testdata.py  vector.py
src/ravenpy/: __init__.py  _raven.py  ravenpy.py
tests/: __init__.py  common.py  conftest.py  emulators.py  test-Mohammad.py  test_ECCC_forecast.py  test_ERA5.py  test_NRCAN_daily.py  test_aggregate_forcings_to_HRUs.py  test_base.py  test_bias_correction.py  test_blended.py  test_calibration.py  test_canadianshield.py  test_cli.py  test_climatology_ESP_verfication.py  test_commands.py  test_config.py  test_coords.py  test_data.py  test_data_assimilation.py  test_defaults.py  test_distributed_workflow.py  test_emulators.py  test_ensemble.py  test_external_dataset_access.py  test_extractor.py  test_forecasting.py  test_geo_utilities.py  test_geoserver.py  test_gis.py  test_graphs.py  test_hbvecmod.py  test_hindcasting.py  test_hypr.py  test_missing.py  test_nb_graphs.py  test_parsers.py  test_raven_multi_model.py  test_ravenio.py  (+11 more)
tests/PassingTests/: test_coords.py  test_external_dataset_access.py  test_geoserver.py  test_nb_graphs.py  test_rv.py  test_testdata.py
tests/ToDelete/: test_ERA5.py  test_climatology_ESP_verfication.py  test_hindcasting.py  test_hypr.py  test_raven_multi_model.py  test_sacsma.py
tests/ToDo/: test_data_assimilation.py  test_regionalisation.py
tests/new_config/: test_base.py  test_calibration.py  test_commands.py  test_config.py  test_data_assimilation.py  test_defaults.py  test_distributed_workflow.py  test_emulators.py  test_ensemble.py  test_extractor.py  test_forecasting.py  test_geo_utilities.py  test_hindcasting.py  test_ravenpy.py  test_regionalisation.py  test_rvs.py  test_spotpy_calibration.py  test_utils.py
tests/testdata/: Mars_MGS_MOLA_DEM_georeferenced_region_compressed.tiff  Saskatoon.geojson  polygons.geojson
(+132 files in other folders)
