[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ravenpy"
authors = [
  {name = "David Huard", email = "huard.david@ouranos.ca"},
  {name = "Richard Arsenault", email = "Richard.Arsenault@etsmtl.ca"}
]
maintainers = [
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9.0"
keywords = ["raven", "raven-hydro", "hydrology", "gis", "analysis", "modelling"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology"
]
dynamic = ["description", "version"]
dependencies = [
  "cftime",
  # cf-xarray is differently named on conda-forge
  "cf-xarray",
  "click >=8.0.0",
  "climpred >=2.4.0",
  "dask",
  "haversine",
  "h5netcdf",
  "matplotlib",
  "netCDF4 <=1.7.1",
  "numpy <2.0.0",
  "owslib >=0.29.1",
  "pandas >=2.2.0",
  "pint >=0.20,<0.24",
  "platformdirs",
  "pydantic >=2.0",
  "pydap",
  "pymbolic",
  "raven-hydro >=0.3.1,<1.0",
  "requests",
  "scipy",
  "spotpy",
  "statsmodels",
  "typing-extensions",
  "xarray >=2023.11.0",
  "xclim >=0.50.0",
  "xskillscore"
]

[project.optional-dependencies]
dev = [
  "black >=24.4.2",
  "bump2version",
  "coverage >=7.5.0",
  "coveralls >=4.0.0",
  "filelock",
  "flake8 >=7.0.0",
  "flit >=3.9.0",
  "holoviews",
  "hvplot",
  "isort >=5.13.2",
  "mypy",
  "pre-commit >=3.5.0",
  "pytest >=7.0.0",
  "pytest-cov >=5.0.0",
  "pytest-xdist >=3.2.0",
  "setuptools >=68.0",
  "tox >=4.15.1",
  "watchdog",
  "wheel >=0.42.0"
]
docs = [
  "autodoc-pydantic",
  "birdhouse-birdy",
  "cartopy",
  "clisops",
  "gcsfs",
  # Needed for notebooks/HydroShare_integration.ipynb
  # See: https://github.com/CSHS-CWRA/RavenPy/pull/326
  # "hsclient",
  "intake <2.0.0",
  "intake-esm",
  "intake-xarray",
  "ipykernel",
  "ipyleaflet",
  "ipython",
  "ipywidgets",
  "jupyter-cache",
  "jupyter_client",
  "jupytext",
  "myst_nb",
  "nbsphinx",
  "numpydoc",
  "pygments",
  "pymetalink",
  "salib",
  "s3fs",
  "sphinx >=7.0.0",
  "sphinx-click",
  "sphinx-codeautolink",
  "sphinx-copybutton",
  "sphinx-rtd-theme >=1.0",
  "xesmf"
]
gis = [
  "affine",
  "fiona >=1.9",
  "geopandas >=0.14.0",
  "gdal >=3.1",
  "lxml",
  "pyogrio <0.8.0", # pyogrio 0.8.0 is not compatible with geopandas
  "pyproj >=3.0.0",
  "rasterio",
  "rioxarray",
  "shapely"
]

[project.scripts]
ravenpy = "ravenpy.cli:main"

[project.urls]
"Homepage" = "https://ravenpy.readthedocs.io"
"Source" = "https://github.com/CSHS-CWRA/RavenPy"
"Changelog" = "https://ravenpy.readthedocs.io/en/latest/history.html"
"Issue tracker" = "https://github.com/CSHS-CWRA/RavenPy/issues"
"About Ouranos" = "https://www.ouranos.ca/en/"
"About CSHS-CWRA" = "https://cwra.org/en/"

[tool]

[tool.black]
target-version = [
  "py39",
  "py310",
  "py311",
  "py312"
]

[tool.coverage.run]
relative_files = true
omit = ["tests/*.py"]

[tool.flit.sdist]
include = [
  "AUTHORS.rst",
  "HISTORY.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "docs/**/*.ipynb",
  "docs/**/*.md",
  "docs/**/*.rst",
  "docs/Makefile",
  "docs/make.bat",
  "docs/conf.py",
  "environment*.yml",
  "ravenpy/**/*.py",
  "ravenpy/data/**/*.csv",
  "ravenpy/data/**/*.zip",
  "setup.cfg",
  "tests/*.py",
  "tests/test.cfg",
  "tox.ini"
]
exclude = [
  "**/*.py[co]",
  "**/__pycache__",
  ".*",
  "docs/_build",
  "docs/apidoc/modules.rst",
  "docs/source/**/.ipynb_checkpoints",
  "docs/apidoc/ravenpy*.rst"
]

[tool.isort]
profile = "black"
py_version = 39
append_only = true

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = false
ignore_missing_imports = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = [
  "--verbose",
  "--color=yes",
  "--strict-markers",
  "--tb=native",
  "--numprocesses=0",
  "--maxprocesses=8",
  "--dist=worksteal"
]
python_files = "test_*.py"
norecursedirs = ["src", ".git", "bin"]
filterwarnings = ["ignore::UserWarning"]
testpaths = "tests"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "online: mark tests that require external services (deselect with '-m \"not online\"')"
]
